# 3dviewer

.github/workflows/: black.yaml  buildifier.yaml  github-actions-are-differences-found.yml  github-actions-are-odb-files-generated.yml  github-actions-check-bazel-lock.yml  github-actions-clang-tidy.yml  github-actions-format-on-push.yml  github-actions-lint-tcl.yml  github-actions-macos-bazel.yml  github-actions-macos.yml  github-actions-on-push.yml
src/: CMakeLists.txt  OpenRoad.cc
src/gui/: CMakeLists.txt
src/gui/openroad3D/: CMakeLists.txt  LayerControl.cpp  LayerControl.h  NEXT_PHASE_IMPLEMENTATION_PLAN.md  OdbSceneBuilder.cpp  OdbSceneBuilder.h  OpenRoad3DWindow.cpp  OpenRoad3DWindow.h  main.cpp
src/gui/openroad3D/core/domain/: SceneTypes.h
src/gui/openroad3D/render/api/: BackendFactory.cpp  BackendFactory.h  BackendType.h  IGeometry.h  ILight.h  IMaterial.h  IRenderBackend.h  IScene.h  ITexture.h  RenderCapabilities.cpp  RenderCapabilities.h
src/gui/openroad3D/render/backend_osg/: OsgBackend.cpp  OsgBackend.h  OsgFontAtlas.cpp  OsgFontAtlas.h  OsgGeometry.cpp  OsgGeometry.h  OsgLight.cpp  OsgLight.h  OsgMaterial.cpp  OsgMaterial.h  OsgPickHandler.cpp  OsgPickHandler.h  OsgScene.cpp  OsgScene.h  OsgTextGeode.cpp  OsgTextGeode.h  OsgTexture.cpp  OsgTexture.h  SpatialIndex.cpp  SpatialIndex.h
src/gui/openroad3D/test/: CMakeLists.txt  README.md  baseline.json  baseline_check.py  debug_label  debug_label.cpp  smoke_test.sh  test_OdbSceneBuilder.cpp  test_layer_control.cpp  test_main.cpp  test_osg_scene.cpp  test_window_smoke.cpp
src/utl/include/utl/: Logger.h
src/xdp/: CMakeLists.txt
src/xdp/include/xdp/: IDpDb.h  MakeXdp.h  Xdp.h
src/xdp/src/: MakeXdp.cpp  OdbDpDb.cpp  OdbDpDb.h  Xdp.cpp  xdp.i  xdp.tcl
src/xgp/: CMakeLists.txt
src/xgp/include/xgp/: MakeXgp.h
src/xgp/src/: GpCost.h  GpDb.h  GpPlacer.cpp  GpPlacer.h  GpSolver.cpp  GpSolver.h  GpTypes.h  MakeXgp.cpp  Xgp.cc  Xgp.h  Xgp.tcl  xgp.i
test/: compare_xgp_gpl.tcl  compare_xgp_gpl_gcd.tcl  regression_global_place.tcl  test_gpl.tcl  test_xgp_regression.sh  xgp_ariane133.tcl  xgp_gcd.tcl
